<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@color/light_grey">

                <LinearLayout
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="24dp">

                        <!-- Your form fields here -->

                        <EditText
                            android:id="@+id/edit_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_username"
                            android:minHeight="48dp"
                            tools:ignore="Autofill,TextFields,TextContrastCheck" />

                        <EditText
                            android:id="@+id/edit_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/enter_email"
                            android:minHeight="48dp"
                            tools:ignore="Autofill,TextFields,TextContrastCheck" />

                        <TextView
                            android:id="@+id/username_warning"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/username_warning"
                            android:textColor="@android:color/holo_red_dark"
                            android:visibility="gone"/>

                        <Button
                            android:id="@+id/btn_ok"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/ok2" />

                        <Button
                            android:id="@+id/btn_cancel"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/cancel2" />
                </LinearLayout>
        </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
