<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dev_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/devinfo_bg">

    <!-- Header Title -->

    <TextView
        android:id="@+id/headerTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/abrilfatface_regular"
        android:text="@string/dev_info"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Circular Profile Image with CardView -->
    <androidx.cardview.widget.CardView
        android:id="@+id/profileImageCard"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        app:cardCornerRadius="75dp"
        app:cardElevation="4dp"
        app:cardBackgroundColor="#B0B0B0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerTitle">

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/profile"
            tools:ignore="ContentDescription" />
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/infoCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:cardBackgroundColor="#D8D8D8"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/profileImageCard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@string/name_imansa_gayathmi"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@string/student_number_2022t01591"
                android:textColor="#000000"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:text="@string/personal_statement_this_app_was_created_to_stay_updated_with_the_latest_faculty_announcements_events_and_academic_news_it_helps_to_stay_informed_and_connected"
                android:textColor="#000000"
                android:textSize="24sp"
                android:lineSpacingExtra="5dp"
                tools:ignore="VisualLintLongText" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="11dp"
                android:text="@string/department_ict"
                android:textColor="#000000"
                android:textSize="24sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/versionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/version_v2_1_0"
        android:textColor="#7A7A7A"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@id/exitButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/exitButton"
        android:layout_width="220dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_button"
        android:fontFamily="@font/abrilfatface_regular"
        android:text="@string/exit"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/versionLabel"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />


</androidx.constraintlayout.widget.ConstraintLayout>
